// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders correctly 1`] = `
<select
  name="test"
  onChange={[Function]}
  value={0}
>
  <option
    key="0"
    value={0}
  >
    0
  </option>
  <option
    key="1"
    value={1}
  >
    1
  </option>
  <option
    key="2"
    value={2}
  >
    2
  </option>
  <option
    key="3"
    value={3}
  >
    3
  </option>
</select>
`;

exports[`render renders padded values correctly 1`] = `
<select
  name="test"
  onChange={[Function]}
  value={0}
>
  <option
    key="00"
    value={0}
  >
    00
  </option>
  <option
    key="01"
    value={1}
  >
    01
  </option>
  <option
    key="02"
    value={2}
  >
    02
  </option>
  <option
    key="03"
    value={3}
  >
    03
  </option>
</select>
`;
